# SBReadFile22-Python

./: pyproject.toml
.github/workflows/: tag_and_publish.yaml
examples/: ExportOnePlaneAsTiff.py  ReadCompressedNpyzFile.py
sldy/: CCompressionBase.py  CImageGroup.py  CMetadataLib.py  CSBFile70.py  CSBPoint.py  DataLoader.py  SBReadFile.py  __init__.py  test.py  test_refresh.py
